--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <br><br>
     <div><h1 class="text-pop-up-top">This Is Planet</h1></div>
-    <img src="img\earth-removebg-preview.png" alt="earth" class="rotate-scale-up">
+    <img src="img\pluto-removebg-preview.png" alt="earth" class="rotate-scale-up">
 </body>
 </html>
