--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animista Project</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <br><br>
-    <div><h1 class="text-pop-up-top">This Is Planet</h1></div>
-    <img src="img\pluto-removebg-preview.png" alt="earth" class="rotate-scale-up">
+    <header>
+
+        <h1 class="text-pop-up-top">This Is Planet</h1>
+
+    </header>
+    <div class="scale-in-center">
+        <img src="img\pluto-removebg-preview.png" alt="earth" class="rotate-scale-up">
+    </div>
 </body>
+
 </html>
